objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Area_Vendita_SAP__c</fullName>
        <label>Area Vendita SAP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.Grid_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Cliente_SAP__c</fullName>
        <label>Codice Cliente SAP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Billing_Adress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Billing Adress</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Sending_Date__c</fullName>
        <label>Contract Sending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signature_Date__c</fullName>
        <inlineHelpText>Date written next to the signature</inlineHelpText>
        <label>Contract Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contratto_Cliente_SAP__c</fullName>
        <label>Contratto Cliente SAP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.Grid_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Expires_on__c</fullName>
        <formula>Contract_Sending_Date__c + Offer_Validity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date after which the Contract is no longer valid</inlineHelpText>
        <label>Deal Expires on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enddatee__c</fullName>
        <inlineHelpText>The date on which the supply of contracted goods or services end (ex. Last Delivery Contracted Date)</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enel_Relationship__c</fullName>
        <label>Enel Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENEL DSO client</fullName>
                </value>
                <value>
                    <fullName>Other DSO client</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_Condition_Terms__c</fullName>
        <label>Condition Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 days from the date of receipt of the invoice</fullName>
                </value>
                <value>
                    <fullName>30 days from the end of the month</fullName>
                </value>
                <value>
                    <fullName>60 days from the date of receipt of the invoice</fullName>
                </value>
                <value>
                    <fullName>60 days from the end of the month</fullName>
                </value>
                <value>
                    <fullName>Loan for use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_ContractAutoNumber__c</fullName>
        <label>Contract Auto Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_ContractConventionName__c</fullName>
        <formula>&quot;GSP&quot; &amp;  Area__c &amp; &quot;_&quot; &amp;  vlocity_cmt__OpportunityId__r.OIRelationship__c &amp; &quot;_&quot; &amp;  vlocity_cmt__OpportunityId__r.Country_Iso_Code__c &amp; &quot;_&quot; &amp; TEXT(YEAR( DATEVALUE(CreatedDate))) &amp; &quot;_&quot; &amp;   TEXT(Grid_ContractAutoNumber__c) &amp; &quot; &quot; &amp;  Account.Name &amp; &quot;_&quot; &amp;  vlocity_cmt__OpportunityId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Convention Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Contract_Term_months__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.Grid_NumberOfContractedMonths__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populate after you fill out Contract Start and End Date</inlineHelpText>
        <label>Contract Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_Economic_offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Economic offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_Enel_Relationship__c</fullName>
        <formula>TEXT(Account.Grid_EnelRelationship__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enel Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_GuaranteeExpiration__c</fullName>
        <formula>ADDMONTHS( Enddatee__c ,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guarantee Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Guarantees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guarantees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_InHandoverDate__c</fullName>
        <label>In Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Profit_Loss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profit&amp;Loss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_Scheda231DeliveryCreatedDate__c</fullName>
        <label>Scheda 231 Delivery Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Scheda231DeliveryLastEditDate__c</fullName>
        <label>Scheda 231 Delivery Last Edit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Scheda231DeliveryNextCheckpoint__c</fullName>
        <label>Scheda 231 Delivery Next Checkpoint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Scheda231DeliveryStatusCheck__c</fullName>
        <formula>CASE(  Grid_Scheda231DeliveryStatus__c  ,
&quot;Closed(green)&quot;, IMAGE(&quot;/resource/GraphicsPackNew/fatcow/farmfresh/32/accept.png&quot;,&quot;Green&quot;),
&quot;Open (red)&quot;, IMAGE(&quot;/resource/GraphicsPackNew/fatcow/farmfresh/32/notUploaded.png&quot;,&quot;Blank&quot;),
IMAGE(&quot;/resource/GraphicsPackNew/fatcow/farmfresh/32/notUploaded.png&quot;,&quot;Blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheda 231 Delivery Status Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Scheda231DeliveryStatus__c</fullName>
        <label>Scheda 231 Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open (red)</fullName>
                    <default>true</default>
                    <label>Open (red)</label>
                </value>
                <value>
                    <fullName>Closed(green)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_Scheda231Delivery__c</fullName>
        <label>Scheda 231 Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Uploaded (default)</fullName>
                    <default>true</default>
                    <label>Not Uploaded (default)</label>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_Scheda231NextCheckpointAuditDate__c</fullName>
        <label>Scheda 231  Next Checkpoint Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Scheda231StatusCheck__c</fullName>
        <formula>CASE( Scheda_231_status__c  ,
&quot;Closed&quot;, IMAGE(&quot;/resource/GraphicsPackNew/fatcow/farmfresh/32/accept.png&quot;,&quot;Green&quot;),
&quot;Open&quot;, IMAGE(&quot;/resource/GraphicsPackNew/fatcow/farmfresh/32/notUploaded.png&quot;,&quot;Blank&quot;),
IMAGE(&quot;/resource/GraphicsPackNew/fatcow/farmfresh/32/notUploaded.png&quot;,&quot;Blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheda 231 Status Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Signed_contract_and_attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed contract and attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_Technical_offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_Total_Actual_quantity__c</fullName>
        <label>Total Actual quantity</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.Grid_Actual_Quantity__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_Total_Price__c</fullName>
        <formula>vlocity_cmt__QuoteId__r.Grid_QuoteTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Total_planned_quantity__c</fullName>
        <label>Total planned quantity</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__Quantity__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_Various_supplier_offers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Various supplier offers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_XDaysAfterHandover__c</fullName>
        <label>X Days After Handover</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_isFrameAgreedActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in a Validation rule to determine whether the Contract has been Frame Agreed</description>
        <label>isFrameAgreedActivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holding_Nam__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holding Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <inlineHelpText>Please update…</inlineHelpText>
        <label>Note</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_contracted_Months__c</fullName>
        <formula>(( Enddatee__c  -  startDatee__c ) /(365/12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populate after you fill out Contract Start and End Date</inlineHelpText>
        <label>Number of contracted Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Validity__c</fullName>
        <inlineHelpText>Select number of valid days “ex. The Offer shall remain valid for a period of 30 days from the date of its issuance”</inlineHelpText>
        <label>Offer Validity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oggetto_SAP__c</fullName>
        <label>Oggetto SAP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_SAP__c</fullName>
        <label>Profit Center SAP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReminderTask__c</fullName>
        <formula>IF(Deal_Expires_on__c  &gt;  TODAY(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReminderTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheda_231_Created_Date__c</fullName>
        <label>Scheda 231  Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheda_231_Next_Checkpoint_Audit_Date__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.Grid_Scheda231NextCheckpointAuditDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheda 231 Next Checkpoint Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheda_231__c</fullName>
        <label>Scheda 231</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Uploaded (default)</fullName>
                    <default>true</default>
                    <label>Not Uploaded (default)</label>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheda_231_last_modification_date__c</fullName>
        <label>Scheda 231  last modification date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheda_231_status__c</fullName>
        <label>Scheda 231 status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open (red)</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <label>Closed(green)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Contract__c</fullName>
        <label>Stage Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>Internal Approved- In Signature</fullName>
                </value>
                <value>
                    <fullName>Contract Sent- Awaiting Client Reply</fullName>
                </value>
                <value>
                    <fullName>Contract Terminated</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
                <value>
                    <fullName>Contract Rejected</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_OdV_SAP__c</fullName>
        <label>Tipo OdV SAP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volturato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Opportunit__c</fullName>
        <formula>TEXT( vlocity_cmt__OpportunityId__r.Grid_TypeOfOpportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Rollout__c</fullName>
        <label>Type of Rollout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Massiva</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WBS_SAP__c</fullName>
        <label>WBS SAP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFrameAgreedActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in a Validation rule to determine whether the Contract has been Frame Agreed</description>
        <label>isFrameAgreedActivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>startDatee__c</fullName>
        <inlineHelpText>The date on which the supply of contracted goods or services begins (ex. First Delivery Contracted Date)</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActiveContractVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the version identifier of the active contract document of this contract</description>
        <label>Active Contract Document</label>
        <referenceTo>vlocity_cmt__ContractVersion__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>vlocity_cmt__Application__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoRenewObjectCreation__c</fullName>
        <description>The object that is created as part of a renewal initiation. Object could be Opportunity, Quote or Order</description>
        <label>Renewal Notification Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Group</label>
        <referenceTo>vlocity_cmt__ContractGroup__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractReferenceNumber__c</fullName>
        <description>A field that can be used to store a user entered or externally referenced contract number</description>
        <label>Contract Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractType__c</fullName>
        <description>The contract type this contract belongs to.</description>
        <label>Contract Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountofContractVersion__c</fullName>
        <description>The number of document versions that have been created for this contract</description>
        <label>Count of Contract Document</label>
        <summaryForeignKey>vlocity_cmt__ContractVersion__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationReason__c</fullName>
        <description>Reason why they contract expired</description>
        <label>Expiration Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does not want to renew</fullName>
                </value>
                <value>
                    <fullName>Moving to M2M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpiredContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the expired contract which this contact now replaces. This contract is considered an replacement of the expired contract</description>
        <label>Expired Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Replacement Contract</relationshipLabel>
        <relationshipName>ReplacementContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActiveDocumentLocked__c</fullName>
        <description>Indicates whether the active version of the contract document of this contract is locked</description>
        <formula>vlocity_cmt__ActiveContractVersionId__r.vlocity_cmt__IsDocumentLocked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active Document Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActiveVersionBatchTemplate__c</fullName>
        <formula>vlocity_cmt__ActiveContractVersionId__r.vlocity_cmt__IsTemplateBatchable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActiveVersionBatchTemplate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsAutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this contract will be renewed automatically.</description>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsFrameContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this contract is a frame contract or a pricing agreement</description>
        <label>Is Frame Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNonStandard__c</fullName>
        <description>If checked, specifies that this contract is a non-standard contract. A non-standard contract is one that deviates from its contract template</description>
        <formula>if( vlocity_cmt__ActiveContractVersionId__r.vlocity_cmt__CountOfNonStandardSection__c &gt;0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocuSignEnvelopeId__c</fullName>
        <label>Last DocuSign Envelope Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocuSignEnvelopeStatus__c</fullName>
        <label>Last DocuSign Envelope Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocuSignJobId__c</fullName>
        <label>Last DocuSign Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocumentBatchJobError__c</fullName>
        <label>Document Batch Job Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocumentBatchJobId__c</fullName>
        <label>Document Batch Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDocumentBatchJobStatus__c</fullName>
        <label>Document Batch Job Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LocaleCode__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__VlocityLocaleCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>Total: One Time Charges</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity from which this contract was created</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order from which this contract was created</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginalContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the original contract from which this contact was created. This contract is considered an amendment of the original contract</description>
        <label>Original Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies parent contract of this contract. This contract is considered a sub-contract of the parent contract</description>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sub Contract</relationshipLabel>
        <relationshipName>ParentContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price list used by contracts</description>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote from which this contract was created</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Total: Monthly Charges</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RenewalNotificationTerm__c</fullName>
        <description>The unit of measure for renewal notification period (days or months)</description>
        <inlineHelpText>auto populate after you fill out Contract Start and End Date</inlineHelpText>
        <label>Renewal Notification Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Months</fullName>
                    <default>true</default>
                    <label>Months</label>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RenewalNotification__c</fullName>
        <description>The time interval before contract expiration when a renewal notification is initiated</description>
        <label>Renewal Notification Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RenewalStartDate__c</fullName>
        <description>Date on which a renewal notification is created, along with the specified renewal notification object. Calculated based on the contract end date, and the renewal notification term and renewal notification period values</description>
        <label>Renewal Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SendRenewalNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that a renewal notification message would be sent on the renewal notification date.</description>
        <label>Send Renewal Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SumOfNonStandardSection__c</fullName>
        <description>DEPRECATED.</description>
        <label>Sum of Non Standard Document</label>
        <summarizedField>vlocity_cmt__ContractVersion__c.vlocity_cmt__CountOfNonStandardSection__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_cmt__ContractVersion__c.vlocity_cmt__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_cmt__ContractVersion__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TerminateDate__c</fullName>
        <description>Date this contract was terminated</description>
        <label>Terminate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TerminationReason__c</fullName>
        <description>The reason this contract was terminated</description>
        <label>Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Not Compliance</fullName>
                </value>
                <value>
                    <fullName>Termination without Cause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>